--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>4 May 2006</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.nothing.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
+                  <span>danisadika.github.io/official-web/</span>
+                </li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+62-8810-1116-6092</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Sunter Agung, Jakarta Utara</span>
                 </li>
